add categories modules and ui

--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -128,7 +128,7 @@
 										</span>
                                     </a>
                                 </li>
-                                <li class="nav-item active">
+                                <li class="nav-item {% block nav-link-stats %}{% endblock %}">
                                     <a href="{% url 'dashboard:statistics' %}" class="nav-link">
 										<span class="svg-icon nav-icon">
 											<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px"
@@ -143,7 +143,7 @@
 										</span>
                                     </a>
                                 </li>
-                                <li class="nav-item">
+                                <li class="nav-item {% block nav-link-products %}{% endblock %}">
                                     <a  class="nav-link" data-toggle="collapse"  href="javascript:void(0)" data-target="#catalog" role="button"
                                         aria-expanded="false" aria-controls="catalog">
 										<span class="svg-icon nav-icon">
@@ -156,7 +156,7 @@
                                         <div id="accordion1">
                                             <ul class="nav flex-column">
                                                 <li class="nav-item">
-                                                    <a href="javascript:void(0)" class="nav-link sub-nav-link">
+                                                    <a href="{% url 'dashboard:categories' %}" class="nav-link sub-nav-link {% block nav-link-products-categories %}{% endblock %}">
 														<span class="svg-icon nav-icon d-flex justify-content-center">
 															<svg xmlns="http://www.w3.org/2000/svg" width="10px" height="10px" fill="currentColor" class="bi bi-circle" viewBox="0 0 16 16">
 																<path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
@@ -383,7 +383,7 @@
                     <div class="container-fluid">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb bg-white mb-0 px-0 py-2">
-                                <li class="breadcrumb-item active" aria-current="page">Statistics</li>
+                                <li class="breadcrumb-item active" aria-current="page">{% block page-title %}{% endblock %}</li>
                             </ol>
                         </nav>
                     </div>
@@ -395,163 +395,7 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12">
-                                <div class="row">
-                                    <div class="col-lg-6 col-xl-3">
-                                        <div class="card card-custom gutter-b bg-white border-0 theme-circle theme-circle-primary">
-
-                                            <div class="card-body">
-                                                <h3 class="text-body font-weight-bold">Orders</h3>
-                                                <div class="mt-3">
-                                                    <div class="d-flex align-items-center">
-															<span class="text-dark font-weight-bold font-size-h1 mr-3"><span
-                                                                    class="counter" data-target="400">0</span></span>
-
-                                                    </div>
-                                                    <div class="text-black-50 mt-3">Compare to last year (2019)</div>
-                                                </div>
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-xl-3">
-                                        <div class="card card-custom gutter-b bg-white border-0 theme-circle theme-circle theme-circle-secondary">
-
-                                            <div class="card-body">
-                                                <h3 class="text-body font-weight-bold">Products</h3>
-                                                <div class="mt-3">
-                                                    <div class="d-flex align-items-center">
-															<span class="text-dark font-weight-bold font-size-h1 mr-3"><span
-                                                                    class="counter" data-target="600">0</span></span>
-
-                                                    </div>
-                                                    <div class="text-black-50 mt-3">Compare to last year (2019)</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-xl-3">
-                                        <div class="card card-custom gutter-b bg-white border-0 theme-circle theme-circle-success">
-
-                                            <div class="card-body">
-                                                <h3 class="text-body font-weight-bold">Users</h3>
-                                                <div class="mt-3">
-                                                    <div class="d-flex align-items-center">
-															<span class="text-dark font-weight-bold font-size-h1 mr-3"><span
-                                                                    class="counter" data-target="1000">0</span></span>
-
-                                                    </div>
-                                                    <div class="text-black-50 mt-3">Compare to last year (2019)</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-xl-3">
-                                        <div class="card card-custom gutter-b bg-white border-0 theme-circle theme-circle-info">
-
-                                            <div class="card-body">
-                                                <h3 class="text-body font-weight-bold">Sales</h3>
-                                                <div class="mt-3">
-                                                    <div class="d-flex align-items-center">
-															<span class="text-dark font-weight-bold font-size-h1 mr-3">$<span
-                                                                    class="counter" data-target="6800">0</span></span>
-                                                        <span
-                                                                class="font-weight-bold font-size-h4 text-danger">8.2</span>
-                                                        <span class="svg-icon text-danger">
-																<svg width="20px" height="20px" viewBox="0 0 16 16"
-                                                                     class="bi bi-arrow-up-short" fill="currentColor"
-                                                                     xmlns="http://www.w3.org/2000/svg">
-																	<path fill-rule="evenodd"
-                                                                          d="M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z" />
-																</svg>
-															</span>
-                                                    </div>
-                                                    <div class="text-black-50 mt-3">Compare to last year (2019)</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row justify-content-center">
-                                    <div class="col-6">
-                                        <div class="card card-custom gutter-b bg-white border-0">
-                                            <div class="card-header align-items-center  border-0">
-                                                <div class="card-title mb-0">
-                                                    <h3 class="card-label font-weight-bold mb-0 text-body">Recent Cash Flow
-                                                    </h3>
-                                                </div>
-                                            </div>
-                                            <div class="card-body">
-                                                <div class="timeline timeline-6 mt-3">
-                                                    <div class="timeline-item align-items-start">
-                                                        <div class="timeline-label font-weight-bold text-black-50 ">08:42</div>
-                                                        <div class="timeline-badge">
-                                                            <i class="fa fa-genderless text-warning icon-xl"></i>
-                                                        </div>
-                                                        <div class="font-weight-mormal timeline-content text-muted pl-3">Outlines keep you honest. And keep structure</div>
-                                                    </div>
-                                                    <div class="timeline-item align-items-start">
-                                                        <div class="timeline-label font-weight-bold text-black-50">10:00</div>
-                                                        <div class="timeline-badge">
-                                                            <i class="fa fa-genderless text-success icon-xl"></i>
-                                                        </div>
-                                                        <div class="timeline-content d-flex">
-                                                            <span class="font-weight-bolder text-body pl-3">AEOL meeting</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="timeline-item align-items-start">
-                                                        <div class="timeline-label font-weight-bold text-black-50 ">14:37</div>
-                                                        <div class="timeline-badge">
-                                                            <i class="fa fa-genderless text-danger icon-xl"></i>
-                                                        </div>
-                                                        <div class="timeline-content font-weight-bold text-body pl-3">Make deposit
-                                                            <a href="index.html#" class="text-primary">USD 700</a>. to ESL</div>
-
-                                                    </div>
-
-                                                    <div class="timeline-item align-items-start">
-                                                        <div class="timeline-label font-weight-bold text-black-50 ">16:50</div>
-                                                        <div class="timeline-badge">
-                                                            <i class="fa fa-genderless text-primary icon-xl"></i>
-                                                        </div>
-                                                        <div class="timeline-content font-weight-mormal text-muted pl-3">Indulging in poorly driving and keep structure keep great</div>
-                                                    </div>
-                                                    <div class="timeline-item align-items-start">
-                                                        <div class="timeline-label font-weight-bold text-black-50">21:03</div>
-                                                        <div class="timeline-badge">
-                                                            <i class="fa fa-genderless text-danger icon-xl"></i>
-                                                        </div>
-                                                        <div class="timeline-content font-weight-bold text-body pl-3">New order placed
-                                                            <a href="index.html#" class="text-primary">#XF-2356</a>.</div>
-                                                    </div>
-                                                    <div class="timeline-item align-items-start">
-                                                        <div class="timeline-label font-weight-bold text-black-50">23:07</div>
-                                                        <div class="timeline-badge">
-                                                            <i class="fa fa-genderless text-info icon-xl"></i>
-                                                        </div>
-                                                        <div class="timeline-content font-weight-mormal text-muted pl-3">Outlines keep and you honest. Indulging in poorly driving</div>
-                                                    </div>
-                                                    <div class="timeline-item align-items-start">
-                                                        <div class="timeline-label font-weight-bold text-black-50">16:50</div>
-                                                        <div class="timeline-badge">
-                                                            <i class="fa fa-genderless text-primary icon-xl"></i>
-                                                        </div>
-                                                        <div class="timeline-content font-weight-mormal text-muted pl-3">Indulging in poorly driving and keep structure keep great</div>
-                                                    </div>
-
-                                                    <div class="timeline-item align-items-start">
-                                                        <div class="timeline-label font-weight-bold text-black-50">21:03</div>
-                                                        <div class="timeline-badge">
-                                                            <i class="fa fa-genderless text-danger icon-xl"></i>
-                                                        </div>
-                                                        <div class="timeline-content font-weight-bold text-body pl-3">New order placed
-                                                            <a href="index.html#" class="text-primary">#XF-2356</a>.</div>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                {% block content %}{% endblock %}
                             </div>
                         </div>
                     </div>
@@ -586,25 +430,52 @@
 <script src="{% static 'dashboard/assets/api/mcustomscrollbar/jquery.mCustomScrollbar.concat.min.js' %}"></script>
 <script src="{% static 'dashboard/assets/api/quill/quill.min.js' %}"></script>
 <script src="{% static 'dashboard/assets/api/datatable/jquery.dataTables.min.js' %}"></script>
-
+<script src="{% static 'dashboard/assets/api/multiple-select/multiple-select.min.js' %}"></script>
+<script src="{% static 'dashboard/assets/js/sweetalert.js' %}"></script>
+<script src="{% static 'dashboard/assets/js/sweetalert1.js' %}"></script>
 <script src="{% static 'dashboard/assets/js/script.bundle.js' %}"></script>
 <script>
-    var options = {
-        debug: 'info',
-        modules: {
-            toolbar: '#toolbar'
-        },
-        placeholder: 'Compose an epic...',
-        readOnly: true,
-        theme: 'snow'
-    };
-    var editor = new Quill('#editor', options);
+    window.$ = jQuery;
+	jQuery(function() {
+		jQuery('.english-select').multipleSelect({
+			filter: true,
+			filterAcceptOnEnter: true
+		})
+	});
+	jQuery(function() {
+		jQuery('.arabic-select').multipleSelect({
+			filter: true,
+			filterAcceptOnEnter: true
+		})
+	});
+	jQuery(document).ready( function () {
+		jQuery('#productUnitTable').dataTable( {
+			"pagingType": "simple_numbers",
 
-
-    jQuery(document).ready( function () {
-        jQuery('#myTable').DataTable();
-    } );
+			"columnDefs": [ {
+				"targets"  : 'no-sort',
+				"orderable": false,
+			}]
+		});
+	});
 </script>
+{% block script %}{% endblock %}
+{# For Base HTML #}
+{#<script>#}
+{#    var options = {#}
+{#        debug: 'info',#}
+{#        modules: {#}
+{#            toolbar: '#toolbar'#}
+{#        },#}
+{#        placeholder: 'Compose an epic...',#}
+{#        readOnly: true,#}
+{#        theme: 'snow'#}
+{#    };#}
+{#    var editor = new Quill('#editor', options);#}
+{#    jQuery(document).ready( function () {#}
+{#        jQuery('#myTable').DataTable();#}
+{#    } );#}
+{#</script>#}
 
 </body>
 <!--end::Body-->
