--- a/dashboard/templates/dashboard/purchase/purchaseEdit.html
+++ b/dashboard/templates/dashboard/purchase/purchaseEdit.html
@@ -31,18 +31,18 @@
                                 {% csrf_token %}
                                 <div class="row">
                                     <div class="col-12">
+{#                                        <div class="form-group">#}
+{#                                            <label for="id_product">Product</label>#}
+{#                                            {{ purchaseForm.product }}#}
+{#                                        </div>#}
                                         <div class="form-group">
-                                            <label for="name">Product</label>
-                                            {{ purchaseForm.product }}
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="id_code">Amount</label>
+                                            <label for="id_amount">Amount</label>
                                             {{ purchaseForm.amount }}
                                         </div>
-                                        <div class="form-group">
-                                            <label>Quantity</label>
-                                            {{ purchaseForm.quantity }}
-                                        </div>
+{#                                        <div class="form-group">#}
+{#                                            <label>Quantity</label>#}
+{#                                            {{ purchaseForm.quantity }}#}
+{#                                        </div>#}
                                         <div class="row justify-content-center">
                                             <div class="col-5 mt-5">
                                                 <button type="submit" class="btn btn-primary">Update purchase</button>
