--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -250,8 +250,8 @@
                                         </ul>
                                     </div>
                                 </li>
-                                <li class="nav-item">
-                                    <a  class="nav-link" href="javascript:void(0)">
+                                <li class="nav-item {% block nav-link-staffs %}{% endblock %}">
+                                    <a  class="nav-link" href="{% url 'dashboard:staffs' %}">
 										<span class="svg-icon nav-icon">
 											<i class="fas fa-user-friends font-size-h4"></i>
 										</span>
