--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -57,6 +57,7 @@
                                 </div>
                             </div>
                             <div class="from-group">
+                                <input type="hidden" name="next" value="{{ request.GET.next }}">
                                 <button type="submit" class="btn btn-primary swipe-to-top">Login</button>
                             </div>
                         </form>
