--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -117,12 +117,7 @@
                                 <li class="nav-item">
                                     <a href="{% url 'dashboard:index' %}" class="nav-link">
 										<span class="svg-icon nav-icon">
-											<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px"
-                                                 viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                                 stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
-												<path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-												<polyline points="9 22 9 12 15 12 15 22"></polyline>
-											</svg>
+											<i class="fa fa-piggy-bank"></i>
 										</span>
                                         <span class="nav-text">
 											POS Dashboard
@@ -339,7 +334,7 @@
                             </div>
                             <div class="dropdown-menu dropdown-menu-right" style="min-width: 150px;">
 
-                                <a href="javascript:void(0)" class="dropdown-item">
+                                <a href="{% url 'dashboard:profile' %}" class="dropdown-item">
 										<span class="svg-icon svg-icon-xl svg-icon-primary mr-2">
 											<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px"
                                                  viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
