--- a/dashboard/templates/dashboard/products/productAdd.html
+++ b/dashboard/templates/dashboard/products/productAdd.html
@@ -43,6 +43,9 @@
                             </h3>
                         </div>
                         <div class="card-body" id="printableTable">
+                            {% for error in productForm.errors %}
+                                <span class="alert alert-primary my-3">{{ error }}</span>
+                            {% endfor %}
                             <form method="post" enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div class="row">
@@ -65,6 +68,10 @@
                                         <div class="form-group">
                                             <label>Categories</label>
                                             {{ productForm.category }}
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Quantity</label>
+                                            {{ productForm.quantity }}
                                         </div>
                                         <div class="row justify-content-center">
                                             <div class="col-5 mt-5">
