--- a/dashboard/templates/dashboard/statistics.html
+++ b/dashboard/templates/dashboard/statistics.html
@@ -10,14 +10,14 @@
             <div class="card card-custom gutter-b bg-white border-0 theme-circle theme-circle-primary">
 
                 <div class="card-body">
-                    <h3 class="text-body font-weight-bold">Orders</h3>
+                    <h3 class="text-body font-weight-bold">Purchases</h3>
                     <div class="mt-3">
                         <div class="d-flex align-items-center">
-															<span class="text-dark font-weight-bold font-size-h1 mr-3"><span
-                                                                    class="counter" data-target="400">0</span></span>
+                        <span class="text-dark font-weight-bold font-size-h1 mr-3">₦<span
+                                class="counter" data-target="{{ purchases }}">0</span></span>
 
                         </div>
-                        <div class="text-black-50 mt-3">Compare to last year (2019)</div>
+                        <div class="text-black-50 mt-3">All Time Purchase</div>
                     </div>
 
                 </div>
@@ -30,11 +30,11 @@
                     <h3 class="text-body font-weight-bold">Products</h3>
                     <div class="mt-3">
                         <div class="d-flex align-items-center">
-															<span class="text-dark font-weight-bold font-size-h1 mr-3"><span
-                                                                    class="counter" data-target="600">0</span></span>
+                            <span class="text-dark font-weight-bold font-size-h1 mr-3">
+                                <span class="counter" data-target="{{products}}">0</span></span>
 
                         </div>
-                        <div class="text-black-50 mt-3">Compare to last year (2019)</div>
+                        <div class="text-black-50 mt-3">Total count value</div>
                     </div>
                 </div>
             </div>
@@ -46,11 +46,11 @@
                     <h3 class="text-body font-weight-bold">Users</h3>
                     <div class="mt-3">
                         <div class="d-flex align-items-center">
-															<span class="text-dark font-weight-bold font-size-h1 mr-3"><span
-                                                                    class="counter" data-target="1000">0</span></span>
+                            <span class="text-dark font-weight-bold font-size-h1 mr-3"><span
+                                    class="counter" data-target="{{ users }}">0</span></span>
 
                         </div>
-                        <div class="text-black-50 mt-3">Compare to last year (2019)</div>
+                        <div class="text-black-50 mt-3">Total Number</div>
                     </div>
                 </div>
             </div>
@@ -62,20 +62,22 @@
                     <h3 class="text-body font-weight-bold">Sales</h3>
                     <div class="mt-3">
                         <div class="d-flex align-items-center">
-															<span class="text-dark font-weight-bold font-size-h1 mr-3">$<span
-                                                                    class="counter" data-target="6800">0</span></span>
+                                <span class="text-dark font-weight-bold font-size-h1 mr-3">
+                                    ₦<span class="counter" data-target="{{ sales.count }}">0</span>
+                                </span>
                             <span
-                                    class="font-weight-bold font-size-h4 text-danger">8.2</span>
-                            <span class="svg-icon text-danger">
-																<svg width="20px" height="20px" viewBox="0 0 16 16"
-                                                                     class="bi bi-arrow-up-short" fill="currentColor"
-                                                                     xmlns="http://www.w3.org/2000/svg">
-																	<path fill-rule="evenodd"
-                                                                          d="M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z" />
-																</svg>
-															</span>
+                                    class="font-weight-bold font-size-h4 {% if sales.profit %}text-success{% else %}text-danger{% endif %}">
+                                {% if sales.profit_level == 0 %}
+                                    100%
+                                {% else %}
+                                    {{ sales.profit_level }}%
+                                {% endif %}
+                            </span>
+                            <span class="svg-icon ml-1 {% if sales.profit %}text-success{% else %}text-danger{% endif %}">
+                                <i class="fa {% if sales.profit %}fa-arrow-up{% else %}fa-arrow-down{% endif %}"></i>
+                            </span>
                         </div>
-                        <div class="text-black-50 mt-3">Compare to last year (2019)</div>
+                        <div class="text-black-50 mt-3">All Time Sales</div>
                     </div>
                 </div>
             </div>
@@ -92,71 +94,29 @@
                 </div>
                 <div class="card-body">
                     <div class="timeline timeline-6 mt-3">
-                        <div class="timeline-item align-items-start">
-                            <div class="timeline-label font-weight-bold text-black-50 ">08:42</div>
-                            <div class="timeline-badge">
-                                <i class="fa fa-genderless text-warning icon-xl"></i>
+                        {% for flow in cashFlows %}
+                            <div class="timeline-item align-items-start">
+                                <div class="timeline-label font-weight-bold text-black-50 ">{{ flow.created_at|time }}</div>
+                                <div class="timeline-badge">
+                                    <i class="fa fa-genderless {% cycle 'text-warning' 'text-success' 'text-danger' 'text-primary' %} icon-xl"></i>
+                                </div>
+                                <div class="font-weight-bolder timeline-content text-muted pl-3">
+                                    {% if flow.product_purchase %}
+                                        {{ flow.product_purchase.created_by.name }}
+                                        <a href="{% url 'dashboard:purchases' %}" class="text-primary">purchased items</a>
+                                        worth ₦{{ flow.product_purchase_amount }}
+                                    {% else %}
+                                        {{ flow.product_sale.created_by.name }}
+                                        <a href="{% url 'dashboard:sales' %}" class="text-primary">sold items</a>
+                                        worth ₦{{ flow.product_sale_amount }}
+                                    {% endif %}
+                                </div>
                             </div>
-                            <div class="font-weight-mormal timeline-content text-muted pl-3">Outlines keep you honest. And keep structure</div>
-                        </div>
-                        <div class="timeline-item align-items-start">
-                            <div class="timeline-label font-weight-bold text-black-50">10:00</div>
-                            <div class="timeline-badge">
-                                <i class="fa fa-genderless text-success icon-xl"></i>
+                        {% empty %}
+                            <div class="col-12 text-center text-primary">
+                                <h5>Empty Cash Flow History</h5>
                             </div>
-                            <div class="timeline-content d-flex">
-                                <span class="font-weight-bolder text-body pl-3">AEOL meeting</span>
-                            </div>
-                        </div>
-                        <div class="timeline-item align-items-start">
-                            <div class="timeline-label font-weight-bold text-black-50 ">14:37</div>
-                            <div class="timeline-badge">
-                                <i class="fa fa-genderless text-danger icon-xl"></i>
-                            </div>
-                            <div class="timeline-content font-weight-bold text-body pl-3">Make deposit
-                                <a href="index.html#" class="text-primary">USD 700</a>. to ESL</div>
-
-                        </div>
-
-                        <div class="timeline-item align-items-start">
-                            <div class="timeline-label font-weight-bold text-black-50 ">16:50</div>
-                            <div class="timeline-badge">
-                                <i class="fa fa-genderless text-primary icon-xl"></i>
-                            </div>
-                            <div class="timeline-content font-weight-mormal text-muted pl-3">Indulging in poorly driving and keep structure keep great</div>
-                        </div>
-                        <div class="timeline-item align-items-start">
-                            <div class="timeline-label font-weight-bold text-black-50">21:03</div>
-                            <div class="timeline-badge">
-                                <i class="fa fa-genderless text-danger icon-xl"></i>
-                            </div>
-                            <div class="timeline-content font-weight-bold text-body pl-3">New order placed
-                                <a href="index.html#" class="text-primary">#XF-2356</a>.</div>
-                        </div>
-                        <div class="timeline-item align-items-start">
-                            <div class="timeline-label font-weight-bold text-black-50">23:07</div>
-                            <div class="timeline-badge">
-                                <i class="fa fa-genderless text-info icon-xl"></i>
-                            </div>
-                            <div class="timeline-content font-weight-mormal text-muted pl-3">Outlines keep and you honest. Indulging in poorly driving</div>
-                        </div>
-                        <div class="timeline-item align-items-start">
-                            <div class="timeline-label font-weight-bold text-black-50">16:50</div>
-                            <div class="timeline-badge">
-                                <i class="fa fa-genderless text-primary icon-xl"></i>
-                            </div>
-                            <div class="timeline-content font-weight-mormal text-muted pl-3">Indulging in poorly driving and keep structure keep great</div>
-                        </div>
-
-                        <div class="timeline-item align-items-start">
-                            <div class="timeline-label font-weight-bold text-black-50">21:03</div>
-                            <div class="timeline-badge">
-                                <i class="fa fa-genderless text-danger icon-xl"></i>
-                            </div>
-                            <div class="timeline-content font-weight-bold text-body pl-3">New order placed
-                                <a href="index.html#" class="text-primary">#XF-2356</a>.</div>
-                        </div>
-
+                        {% endfor %}
                     </div>
                 </div>
             </div>
