--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -41,7 +41,7 @@
                     <div class="row align-items-center">
                         <div class="col-12 col-md-3 col-lg-2">
                             <div class="logo">
-                                <a href="javascript:void(0)" >
+                                <a href="{% url 'home' %}" >
                                     <img class="img-fluid" src="{% static 'home/images/logo/mts_logo.png' %}" alt="logo here">
                                 </a>
                             </div>
@@ -50,11 +50,11 @@
                             <nav class="navbar navbar-expand-lg">
                                 <div class="navbar-collapse" >
                                     <ul class="navbar-nav">
-{#                                        <li class="nav-item dropdown">#}
-{#                                            <a class="nav-link dropdown-toggle" href="javascript:void(0)">#}
-{#                                                Elements#}
-{#                                            </a>#}
-{#                                        </li>#}
+                                        {#                                        <li class="nav-item dropdown">#}
+                                        {#                                            <a class="nav-link dropdown-toggle" href="javascript:void(0)">#}
+                                        {#                                                Elements#}
+                                        {#                                            </a>#}
+                                        {#                                        </li>#}
                                     </ul>
                                 </div>
                             </nav>
@@ -919,7 +919,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-md-3 col-lg-2">
                     <div class="logo">
-                        <a href="javascript:void(0)" >
+                        <a href="{% url 'home' %}" >
                             <img class="img-fluid" src="{% static 'home/images/logo/mts_logo.png' %}" alt="mts logo">
                         </a>
                     </div>
@@ -928,16 +928,24 @@
                     <nav class="navbar navbar-expand-lg">
                         <div class="navbar-collapse justify-content-end" >
                             <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'register' %}">
-                                        Register
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'login' %}">
-                                        Login
-                                    </a>
-                                </li>
+                                {% if request.user.is_authenticated %}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'dashboard:index' %}">
+                                            POS Dashboard
+                                        </a>
+                                    </li>
+                                {% else %}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'register' %}">
+                                            Register
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'login' %}">
+                                            Login
+                                        </a>
+                                    </li>
+                                {% endif %}
                             </ul>
                         </div>
                     </nav>
@@ -952,7 +960,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-2">
                     <div class="logo">
-                        <a href="javascript:void(0)" >
+                        <a href="{% url 'home' %}" >
                             <img class="img-fluid" src="{% static 'home/images/logo/mts_logo.png' %}" alt="mts logo">
                         </a>
                     </div>
@@ -961,16 +969,24 @@
                     <nav class="navbar navbar-expand-lg">
                         <div class="navbar-collapse justify-content-end" >
                             <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'register' %}">
-                                        Register
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'login' %}">
-                                        Login
-                                    </a>
-                                </li>
+                                {% if request.user.is_authenticated %}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'dashboard:index' %}">
+                                            POS Dashboard
+                                        </a>
+                                    </li>
+                                {% else %}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'register' %}">
+                                            Register
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{% url 'login' %}">
+                                            Login
+                                        </a>
+                                    </li>
+                                {% endif %}
                             </ul>
                         </div>
                     </nav>
@@ -992,17 +1008,26 @@
                             <nav id="navigation-mobile">
                                 <div class="logout-main">
                                     <div class="welcome">
-                                        <span>Welcome&nbsp;Guest !</span>
+                                        <span>Welcome !</span>
                                     </div>
                                 </div>
-                                <a href="javascript:void(0)" class="main-manu btn ">
-                                    My Account
-                                </a>
+                                {% if request.user.is_authenticated %}
+                                    <a href="{% url 'dashboard:index' %}" class="main-manu btn ">
+                                        My Account
+                                    </a>
+                                {% else %}
+                                    <a href="{% url 'register' %}" class="main-manu btn ">
+                                        Register
+                                    </a>
+                                    <a href="{% url 'login' %}" class="main-manu btn ">
+                                        Login
+                                    </a>
+                                {% endif %}
                             </nav>
                         </div>
                     </div>
                     <div class="col-6 d-flex justify-content-center">
-                        <a href="javascript:void(0)" class="logo">
+                        <a href="{% url 'home' %}" class="logo">
                             <img class="img-fluid" src="{% static 'home/images/logo/logo2.png' %}" alt="mts logo">
                         </a>
                     </div>
